[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/ButtonGrayUp.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/ButtonGrayDown.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/baseline_volume_off_black_36dp.png" type="Texture" id=3]
[ext_resource path="res://TopScripts/Audiobutton.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/baseline_volume_up_black_36dp.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/ButtonGreyMask.png" type="BitMap" id=6]

[node name="AudioButton" type="TextureButton"]
modulate = Color( 0.956863, 0.494118, 0.313726, 1 )
margin_right = 32.0
margin_bottom = 32.0
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_click_mask = ExtResource( 6 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioOn" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioOff" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="." to="." method="_on_AudioButton_toggled"]
